# opengl-demo

./: CMakeLists.txt  README.md
src/: main.c  main.cpp  screen.c  screen.h
